web-infras/parser/tests/fixtures/esprima/ES2016/strict-directive/invalid-strict-method-object-destructuring/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (1,20)
1|class X { f({a}) { "use strict" } }
 |                  ^
